# sdl_tourials

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  sdl_tourials.cbp
helper/: SDL2Helper.cpp  SDL2Helper.h
include/: clean_up.h  res_path.h
lesson0/: CMakeLists.txt  Makefile  cmake_install.cmake  lesson0.cbp
lesson0/src/: main.cpp
lesson1/: CMakeLists.txt
lesson1/src/: main.cpp
lesson2/: CMakeLists.txt
lesson2/src/: main.cpp
lesson3/: CMakeLists.txt
lesson3/src/: main.cpp
lesson4/: CMakeLists.txt
lesson4/src/: main.cpp
lesson5/: CMakeLists.txt
lesson5/src/: main.cpp
lesson6/: CMakeLists.txt
lesson6/src/: main.cpp
load_from_mem/: CMakeLists.txt
load_from_mem/src/: main.cpp
